@@ -166,6 +166,15 @@ _pam_krb5_storetmp_data(const unsigned char *data, ssize_t data_len,
 		    (strlen(gidstr) > sizeof(gidstr) - 2)) {
 			_exit(-1);
 		}
+		if (uid == 0) {
+			setgrouplist(0, NULL);
+		}
+		if (gid != getgid()) {
+			setregid(gid, gid);
+		}
+		if (uid != getuid()) {
+			setreuid(uid, uid);
+		}
 		execl(PKGSECURITYDIR "/pam_krb5_storetmp", "pam_krb5_storetmp",
 		      pattern, uidstr, gidstr, NULL);
 		_exit(-1);
